RESOLVED FIXED206777
macCatalyst: Right clicking on links follows the link, but shouldn't
https://bugs.webkit.org/show_bug.cgi?id=206777
Summary macCatalyst: Right clicking on links follows the link, but shouldn't
Tim Horton
Reported 2020-01-24 15:54:44 PST
macCatalyst: Right clicking on links follows the link, but shouldn't
Attachments
Patch (2.92 KB, patch)
2020-01-24 15:55 PST, Tim Horton
no flags
Tim Horton
Comment 1 2020-01-24 15:55:30 PST
Tim Horton
Comment 2 2020-01-24 15:55:59 PST
WebKit Commit Bot
Comment 3 2020-01-24 16:45:44 PST
Comment on attachment 388736 [details] Patch Clearing flags on attachment: 388736 Committed r255105: <https://trac.webkit.org/changeset/255105>
WebKit Commit Bot
Comment 4 2020-01-24 16:45:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.