Cherry-pick r255105. rdar://problem/58920180

macCatalyst: Right clicking on links follows the link, but shouldn't
    https://bugs.webkit.org/show_bug.cgi?id=206777
    <rdar://problem/56586280>

    Reviewed by Wenson Hsieh.

    * UIProcess/ios/WKMouseGestureRecognizer.mm:
    (-[WKMouseGestureRecognizer createMouseEventWithType:forEvent:]):
    (-[WKMouseGestureRecognizer touchesEnded:withEvent:]):
    I got 'button' and 'buttons' backwards.

    'button' indicates which button the event is about, so in MouseUp,
    it should still be 2.

    'buttons' indicate which buttons are still down, so in MouseUp,
    it should not include 2. Since we don't currently track mouse button
    chording here, we'll just say "none". Leave a FIXME about that.

    This makes WebCore's behavior correct, and now it doesn't follow the link.

    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255105 268f45cc-cd09-0410-ab3c-d52691b4dbfc

git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@255205 268f45cc-cd09-0410-ab3c-d52691b4dbfc